[workspace]
members = ["xtask"]

[package]
name = "souko"
version = "0.2.0"
edition = "2021"
rust-version = "1.74.0"
description = "A simple command line utility that provides an easy way to organize clones of remote git repositories"
readme = "README.md"
repository = "https://github.com/gifnksm/souko"
license = "MIT OR Apache-2.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
keywords = ["git", "vcs", "cli", "utility"]
categories = ["command-line-utilities"]

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
maintenance = true
license = { link = "#license" }
crates-io = true
docs-rs = true
rust-version = true
github-actions = { workflows = ["ci.yml"] }
codecov = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
chrono = { version = "0.4.38", features = ["clock", "serde"], default_features = false }
clap = { version = "4.5.13", features = ["derive", "env"] }
color-eyre = "0.6.3"
custom_debug_derive = "0.6.1"
directories = "5.0.1"
git2 = { version = "0.18.3" }
git2_credentials = "0.13.0"
once_cell = "1.19.0"
regex = "1.10.6"
remove_dir_all = "0.8.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tempfile = "3.10.1"
thiserror = "1.0.63"
toml_edit = { version = "0.22.20", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.15"
assert_fs = "1.1.2"
predicates = "3.1.2"

[build-dependencies]

[features]
default = []
vendored-libgit2 = ["git2/vendored-libgit2"]
vendored-openssl = ["git2/vendored-openssl"]

[profile.dev]

[profile.release]
strip = true

[badges]
maintenance = { status = "actively-developed" }
