[workspace]
members = ["xtask"]

[package]
name = "souko"
version = "0.2.2"
edition = "2021"
rust-version = "1.81.0"
description = "A simple command line utility that provides an easy way to organize clones of remote git repositories"
readme = "README.md"
repository = "https://github.com/gifnksm/souko"
license = "MIT OR Apache-2.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
keywords = ["git", "vcs", "cli", "utility"]
categories = ["command-line-utilities"]

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
maintenance = true
license = { link = "#license" }
crates-io = true
docs-rs = true
rust-version = true
github-actions = { workflows = ["ci.yml"] }
codecov = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
chrono = { version = "0.4.40", features = ["clock", "serde"], default-features = false }
clap = { version = "4.5.46", features = ["derive", "env"] }
color-eyre = "0.6.5"
custom_debug_derive = "0.6.2"
directories = "6.0.0"
dunce = "1.0.5"
git2 = { version = "0.20.1" }
git2_credentials = "0.15.0"
once_cell = "1.21.3"
regex = "1.11.1"
remove_dir_all = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
thiserror = "2.0.12"
toml_edit = { version = "0.23.4", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.4"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.2"
predicates = "3.1.3"

[build-dependencies]

[features]
default = []
vendored-libgit2 = ["git2/vendored-libgit2"]
vendored-openssl = ["git2/vendored-openssl"]

[profile.dev]

[profile.release]
strip = true

[badges]
maintenance = { status = "actively-developed" }
